--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ishika's Personal Site</title>
+    <style>
+  /* Default styles */
+  body {
+    font-size: 16px;
+  }
+
+  /* Responsive styles for smaller screens */
+  @media only screen and (max-width: 600px) {
+    body {
+      font-size: 14px;
+    }
+  }
+</style>
+
 </head>
 <body>
     <table cellspacing="13">
